--- a/GeeksNearby-mobile/www/index.html
+++ b/GeeksNearby-mobile/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Nearby Geeks App</title>
+    <title>GeeksNearby.com</title>
 
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8">
@@ -12,6 +12,8 @@
     <script src="scripts/libs/less/less-1.3.0.min.js" type="text/javascript"></script>
 
     <script type="text/javascript" charset="utf-8" src="scripts/libs/cordova/cordova-ios-1.9.0.js"></script>
+    <script type="text/javascript" charset="utf-8" src="scripts/libs/cordova/Globalization-ios.js"></script>
+
     <script data-main="scripts/main" src="scripts/libs/require/require.js"></script>
 
     <!--<script src="http://debug.phonegap.com/target/target-script-min.js#geeks"></script>-->
