--- a/GeeksNearby-mobile/www/index.html
+++ b/GeeksNearby-mobile/www/index.html
@@ -7,12 +7,13 @@
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="scripts/libs/jquery.mobile/jquery.mobile-1.1.1.css"/>
+    <link rel="stylesheet" href="css/jquery-mobile-red-buttons.css"/>
+
 
     <link rel="stylesheet/less" type="text/css" href="css/style.less">
     <script src="scripts/libs/less/less-1.3.0.min.js" type="text/javascript"></script>
 
     <script type="text/javascript" charset="utf-8" src="scripts/libs/cordova/cordova-ios-1.9.0.js"></script>
-    <script type="text/javascript" charset="utf-8" src="scripts/libs/cordova/Globalization-ios.js"></script>
 
     <script data-main="scripts/main" src="scripts/libs/require/require.js"></script>
 
