--- a/GeeksNearby-mobile/www/index-ios.html
+++ b/GeeksNearby-mobile/www/index-ios.html
@@ -13,12 +13,12 @@
     <script src="scripts/libs/less/less-1.3.0.min.js" type="text/javascript"></script>
 
     <style type="text/css">
-        .overthrow-content {
+        .overthrow-content > * {
             -webkit-transform: translateZ(0px);
         }
     </style>
 
-    <script type="text/javascript" charset="utf-8" src="scripts/libs/cordova/cordova-ios-1.9.0.js"></script>
+    <script type="text/javascript" charset="utf-8" src="scripts/libs/cordova/cordova-2.0.0rc1.js"></script>
 
     <script data-main="scripts/main" src="scripts/libs/require/require.js"></script>
 
