Added PhoneGap build setup

--- a/GeeksNearby-mobile/www/index.html
+++ b/GeeksNearby-mobile/www/index.html
@@ -18,11 +18,10 @@
         }
     </style>
 
-    <script type="text/javascript" charset="utf-8" src="scripts/libs/cordova/cordova-ios-2.0.0.js"></script>
-    <script type="text/javascript" charset="utf-8" src="scripts/libs/cordova/ChildBrowser-ios.js"></script>
+    <script src="phonegap.js"></script>
+    <script src="childbrowser.js"></script>
 
     <script data-main="scripts/main" src="scripts/libs/require/require.js"></script>
-
     <!--<script src="http://debug.phonegap.com/target/target-script-min.js#geeks"></script>-->
 </head>
 <body>
